--- a/events.html
+++ b/events.html
@@ -2,20 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Echo Harmony - Events</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <h1>Echo Harmony - Upcoming Events</h1>
-    <nav>
+    <header>
+        <h1><i class="fas fa-calendar-day icon"></i> Upcoming Events</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="live.html">Live</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="merch.html">Merch</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="new.html">New</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="events-section">
+        <h2>Upcoming Concerts</h2>
+        <p>Echo Harmony will be performing at the following venues:</p>
         <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="live.html">Live</a></li>
-            <li><a href="music.html">Music</a></li>
-            <li><a href="merch.html">Merch</a></li>
-            <li><a href="events.html">Events</a></li>
-            <li><a href="news.html">News</a></li>
+            <li>June 10th, 2025 - New York, NY</li>
+            <li>June 20th, 2025 - Los Angeles, CA</li>
         </ul>
-    </nav>
-    <p>Check out Echo Harmony's event calendar and tour dates!</p>
+        <img src="images/events_image.jpg" alt="Upcoming Events">
+    </section>
+    <footer>
+        <p>&copy; 2025 Echo Harmony</p>
+    </footer>
 </body>
 </html>
